--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,9 @@ php:
 
 install:
   - composer self-update
-  - composer install --dev --prefer-dist
+  - composer install --dev
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: hhvm
